<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_dataFragment"
            android:icon="@drawable/ic_menu_data"
            android:title="@string/menu_dataFragment"/>
        <item
            android:id="@+id/nav_webViewFragment"
            android:icon="@drawable/ic_menu_web_view"
            android:title="@string/menu_webViewFragment"/>
        <item
            android:id="@+id/nav_notificationFragment"
            android:icon="@drawable/notification_icon"
            android:title="@string/menu_notification"/>
        <item
            android:id="@+id/nav_compassFragment"
            android:icon="@drawable/compass_icon"
            android:title="@string/menu_compass"/>
        <item
            android:id="@+id/nav_notesFragment"
            android:icon="@drawable/notes_icon"
            android:title="@string/menu_notes"/>
        <item
            android:id="@+id/nav_microphoneFragment"
            android:icon="@drawable/microphone_icon"
            android:title="@string/menu_microphone"/>
        <item
            android:id="@+id/nav_profileFragment"
            android:icon="@drawable/profile_icon"
            android:title="@string/menu_profile"/>
        <item
            android:id="@+id/nav_fileProcessingFragment"
            android:icon="@drawable/file_icon"
            android:title="@string/menu_fileProcessing"/>
        <item
            android:id="@+id/nav_apiFragment"
            android:icon="@drawable/api_icon"
            android:title="@string/menu_api"/>
        <item
            android:id="@+id/nav_mapFragment"
            android:icon="@drawable/map_icon"
            android:title="@string/menu_map"/>

        <!--        <item-->
        <!--            android:id="@+id/nav_gallery"-->
        <!--            android:icon="@drawable/ic_menu_gallery"-->
        <!--            android:title="@string/menu_gallery" />-->
        <!--        <item-->
        <!--            android:id="@+id/nav_slideshow"-->
        <!--            android:icon="@drawable/ic_menu_slideshow"-->
        <!--            android:title="@string/menu_slideshow" />-->
    </group>
</menu>