<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.shamrovio.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_dataFragment"
        android:name="ru.mirea.shamrovio.mireaproject.ui.lesson3.DataFragment"
        android:label="@string/menu_dataFragment"
        tools:layout="@layout/fragment_data" />
    <fragment
        android:id="@+id/nav_webViewFragment"
        android:name="ru.mirea.shamrovio.mireaproject.ui.lesson3.WebViewFragment"
        android:label="@string/menu_webViewFragment"
        tools:layout="@layout/fragment_web_view" />
    <fragment
        android:id="@+id/nav_notificationFragment"
        android:name="ru.mirea.shamrovio.mireaproject.ui.lesson4.WorkerFragment"
        android:label="@string/menu_notification"
        tools:layout="@layout/fragment_worker"/>
    <fragment
        android:id="@+id/nav_compassFragment"
        android:name="ru.mirea.shamrovio.mireaproject.ui.lesson5.CompassFragment"
        android:label="@string/menu_compass"
        tools:layout="@layout/fragment_compass"/>
    <fragment
        android:id="@+id/nav_notesFragment"
        android:name="ru.mirea.shamrovio.mireaproject.ui.lesson5.NotesFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_notes"/>
    <fragment
        android:id="@+id/nav_microphoneFragment"
        android:name="ru.mirea.shamrovio.mireaproject.ui.lesson5.MicrophoneFragment"
        android:label="@string/menu_microphone"
        tools:layout="@layout/fragment_microphone"/>
    <fragment
        android:id="@+id/nav_profileFragment"
        android:name="ru.mirea.shamrovio.mireaproject.ui.lesson6.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile"/>
    <fragment
        android:id="@+id/nav_fileProcessingFragment"
        android:name="ru.mirea.shamrovio.mireaproject.ui.lesson6.fileprocessing.FileProcessingFragment"
        android:label="@string/menu_fileProcessing"
        tools:layout="@layout/fragment_file_processing"/>
    <fragment
        android:id="@+id/nav_apiFragment"
        android:name="ru.mirea.shamrovio.mireaproject.ui.lesson7.ApiFragment"
        android:label="@string/menu_api"
        tools:layout="@layout/fragment_api"/>
    <fragment
        android:id="@+id/nav_mapFragment"
        android:name="ru.mirea.shamrovio.mireaproject.ui.lesson8.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map"/>

    <!--    <fragment-->
    <!--        android:id="@+id/nav_gallery"-->
    <!--        android:name="ru.mirea.shamrovio.mireaproject.ui.gallery.GalleryFragment"-->
    <!--        android:label="@string/menu_gallery"-->
    <!--        tools:layout="@layout/fragment_gallery" />-->
    <!--    <fragment-->
    <!--        android:id="@+id/nav_slideshow"-->
    <!--        android:name="ru.mirea.shamrovio.mireaproject.ui.slideshow.SlideshowFragment"-->
    <!--        android:label="@string/menu_slideshow"-->
    <!--        tools:layout="@layout/fragment_slideshow"/>-->
</navigation>